--- a/debian/control
+++ b/debian/control
@@ -9,4 +9,5 @@ Homepage: https://github.com/Maxrule/System-Programming
 Package: calcfiles
 Architecture: all
 Depends: bash
-Description: A simple script to calculate files in a directory. This script counts the number of files in a given directory.
+Description: A simple script to calculate files in a directory.
+ This script counts the number of files in a given directory.
