--- a/.github/workflows/build-rmp.yml
+++ b/.github/workflows/build-rmp.yml
@@ -1,14 +1,3 @@
-name: Build RPM Package
-
-on:
-  push:
-    branches:
-      - main
-    paths:
-      - 'rpm/.spec'
-      - '.sh'
-  workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,6 +20,12 @@ jobs:
           yum install -y rpm-build rpmdevtools wget unzip
           rpmdev-setuptree
 
+      - name: Download and fix archive path
+        run: |
+          wget -O main.zip https://github.com/Maxrule/System-Programming/archive/main.zip
+          # Удаление символов возврата каретки из пути
+          sed -i 's/\r//g' main.zip
+
       - name: Copy spec file and fix line endings
         run: |
           cp rpm/calcfiles.spec ~/rpmbuild/SPECS/
@@ -40,7 +35,7 @@ jobs:
       - name: Build RPM
         run: |
           cd ~/rpmbuild/SOURCES/
-          wget -O main.zip https://github.com/Maxrule/System-Programming/archive/main.zip
+          unzip -q main.zip
           cd ../../
           rpmbuild -bs --define "dist .generic" rpmbuild/SPECS/calcfiles.spec
           rpmbuild --rebuild rpmbuild/SRPMS/calcfiles-1.0-1.generic.src.rpm
