--- a/.github/workflows/build-rmp.yml
+++ b/.github/workflows/build-rmp.yml
@@ -1,52 +1,59 @@
-name: Build RMP Package
+name: Build RPM Package
 
 on:
-  jobs:
-    build:
-      runs-on: ubuntu-latest
+  push:
+    branches:
+      - main
+    paths:
+      - 'rpm/.spec'
+      - '.sh'
+  workflow_dispatch:
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-      container:
-        image: centos:8
+    container:
+      image: centos:8
 
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v3
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-        - name: Configure YUM to use vault.centos.org
-          run: |
-            echo "Configuring YUM to use vault.centos.org"
-            sed -i 's|mirrorlist=http://mirrorlist.centos.org|#mirrorlist=http://mirrorlist.centos.org|g' /etc/yum.repos.d/CentOS-*.repo
-            sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*.repo
+      - name: Configure YUM to use vault.centos.org
+        run: |
+          echo "Configuring YUM to use vault.centos.org"
+          sed -i 's|mirrorlist=http://mirrorlist.centos.org|#mirrorlist=http://mirrorlist.centos.org|g' /etc/yum.repos.d/CentOS-*.repo
+          sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*.repo
 
-        - name: Install RPM build tools
-          run: |
-            yum install -y rpm-build rpmdevtools wget unzip
-            rpmdev-setuptree
+      - name: Install RPM build tools
+        run: |
+          yum install -y rpm-build rpmdevtools wget unzip
+          rpmdev-setuptree
 
-        - name: Download and fix archive path
-          run: |
-            wget -O main.zip https://github.com/Maxrule/System-Programming/archive/main.zip
-            # Удаление символов возврата каретки из пути
-            sed -i 's/\r//g' main.zip
+      - name: Download and fix archive path
+        run: |
+          wget -O main.zip https://github.com/Maxrule/System-Programming/archive/main.zip
+          # Удаление символов возврата каретки из пути
+          sed -i 's/\r//g' main.zip
 
-        - name: Copy spec file and fix line endings
-          run: |
-            cp rpm/calcfiles.spec ~/rpmbuild/SPECS/
-            # Удаление символов возврата каретки (CRLF)
-            sed -i 's/\r//g' ~/rpmbuild/SPECS/calcfiles.spec
+      - name: Copy spec file and fix line endings
+        run: |
+          cp rpm/calcfiles.spec ~/rpmbuild/SPECS/
+          # Удаление символов возврата каретки (CRLF)
+          sed -i 's/\r//g' ~/rpmbuild/SPECS/calcfiles.spec
 
-        - name: Build RPM
-          run: |
-            cd ~/rpmbuild/SOURCES/
-            unzip -q main.zip
-            cd ../../
-            rpmbuild -bs --define "dist .generic" rpmbuild/SPECS/calcfiles.spec
-            rpmbuild --rebuild rpmbuild/SRPMS/calcfiles-1.0-1.generic.src.rpm
+      - name: Build RPM
+        run: |
+          cd ~/rpmbuild/SOURCES/
+          unzip -q main.zip
+          cd ../../
+          rpmbuild -bs --define "dist .generic" rpmbuild/SPECS/calcfiles.spec
+          rpmbuild --rebuild rpmbuild/SRPMS/calcfiles-1.0-1.generic.src.rpm
 
-        - name: Upload RPM
-          uses: actions/upload-artifact@v3
-          with:
-            name: rpm-package
-            path: |
-              ~/rpmbuild/RPMS/**/*.rpm
-              ~/rpmbuild/SRPMS/**/*.src.rpm
+      - name: Upload RPM
+        uses: actions/upload-artifact@v3
+        with:
+          name: rpm-package
+          path: |
+            ~/rpmbuild/RPMS/**/*.rpm
+            ~/rpmbuild/SRPMS/**/*.src.rpm
